--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     # This is crucial for data persistence, so your data isn't lost
     # when the container stops or restarts.
     volumes:
-      - type: bind
-      - source: ./swear_jar.json
-      - target: /app/swear_jar.json
+      - swear_jar_data:/app
+
+volumes:
+  swear_jar_data:
